--- a/global.css
+++ b/global.css
@@ -2,3 +2,89 @@ body {
   margin: 0;
   line-height: normal;
 }
+
+:root {
+  /* fonts */
+  --font-tt-interphases: "TT Interphases";
+
+  /* font sizes */
+  --font-size-5xs: 8px;
+  --font-size-6xs: 7px;
+  --font-size-4xs: 9px;
+  --font-size-3xs: 10px;
+  --font-size-xs: 12px;
+
+  /* Colors */
+  --black-b0-bgwhite: #fff;
+  --black-b50-bgdisabled: #ededed;
+  --black-character-low-emphasis: #ada6ae;
+  --color-darkgray-100: #a7a7a7;
+  --black-b300-txtbody: #494949;
+  --black-b400-txttitle: #333;
+  --black-b200-txtplaceholder: #686868;
+  --color-dimgray-100: #615a5a;
+  --color-lightblue: #cae6fc;
+  --blue-b400: #0058b2;
+  --sukha-violet-v300: #41396d;
+  --sukha-slate-blue-s300: #7697ce;
+  --red-r300-text-error: #ed1c24;
+  --yellow-y300-highlight: #ffb700;
+  --blue-b300-primary: #007dfe;
+  --green-g300: #00ba4a;
+  --color-black: #000;
+  --color-aliceblue: #e3f1fc;
+  --color-lavender: #cae5fc;
+  --color-cornflowerblue-100: #40a9ff;
+  --color-cornflowerblue-200: #3fa7fc;
+
+  /* Gaps */
+  --gap-26xl: 45px;
+  --gap-3xl: 22px;
+  --gap-5xs: 8px;
+  --gap-19xl-5: 38.5px;
+  --gap-lgi: 19px;
+  --gap-79xl: 98px;
+  --gap-36xl: 55px;
+  --gap-2xs: 11px;
+  --gap-11xs: 2px;
+  --gap-10xs: 3px;
+  --gap-4xs-5: 8.5px;
+  --gap-5xs-5: 7.5px;
+  --gap-mini: 15px;
+  --gap-9xs: 4px;
+  --gap-5xl: 24px;
+  --gap-base: 16px;
+  --gap-7xs: 6px;
+  --gap-xl: 20px;
+  --gap-xs: 12px;
+  --gap-50xl: 69px;
+  --gap-mid: 17px;
+  --gap-15xl: 34px;
+  --gap-83xl-5: 102.5px;
+  --gap-19xl: 38px;
+
+  /* Paddings */
+  --padding-base: 16px;
+  --padding-3xs: 10px;
+  --padding-xs: 12px;
+  --padding-8xs: 5px;
+  --padding-12xs: 1px;
+  --padding-27xl: 46px;
+  --padding-9xs: 4px;
+  --padding-lgi: 19px;
+  --padding-5xs: 8px;
+  --padding-7xs: 6px;
+  --padding-mid: 17px;
+  --padding-mini: 15px;
+  --padding-sm: 14px;
+  --padding-smi: 13px;
+  --padding-5xs-5: 7.5px;
+  --padding-6xs: 7px;
+  --padding-9xs-5: 3.5px;
+  --padding-xl: 20px;
+  --padding-16xl: 35px;
+  --padding-7xl: 26px;
+  --padding-10xs: 3px;
+  --padding-6xl: 25px;
+  --padding-25xl: 44px;
+}
