--- a/root1.css
+++ b/root1.css
@@ -16,7 +16,7 @@
   height: 81px;
   width: 595px;
   position: relative;
-  background-color: #007dfe;
+  background-color: var(--blue-b300-primary);
   display: none;
   max-width: 100%;
   z-index: 0;
@@ -40,15 +40,17 @@
   margin: 0;
   align-self: stretch;
   position: relative;
-  font-size: inherit;
   line-height: 24px;
-  font-weight: 700;
   font-family: inherit;
   z-index: 2;
 }
+.e-statement-gabungan1 {
+  font-size: inherit;
+  font-weight: 700;
+}
 .consolidated-e-statement1 {
   height: 19.1px;
-  font-size: 10px;
+  font-size: var(--font-size-3xs);
   display: flex;
   font-style: italic;
   font-weight: 400;
@@ -68,7 +70,7 @@
 .header-child {
   width: 214.5px;
   justify-content: flex-end;
-  padding: 0 0 1px;
+  padding: 0 0 var(--padding-12xs);
   box-sizing: border-box;
 }
 .logo-variant-icon1 {
@@ -96,26 +98,26 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 12px;
-  font-size: 8px;
+  gap: var(--gap-xs);
+  font-size: var(--font-size-5xs);
 }
 .header1 {
   align-self: stretch;
-  background-color: #007dfe;
+  background-color: var(--blue-b300-primary);
   display: flex;
   flex-direction: row;
   align-items: flex-end;
   justify-content: space-between;
-  padding: 15px 16px 14px;
+  padding: var(--padding-mini) var(--padding-base) var(--padding-sm);
   box-sizing: border-box;
   position: relative;
   max-width: 100%;
-  gap: 20px;
+  gap: var(--gap-xl);
   z-index: 1;
   text-align: left;
-  font-size: 12px;
-  color: #fff;
-  font-family: "TT Interphases";
+  font-size: var(--font-size-xs);
+  color: var(--black-b0-bgwhite);
+  font-family: var(--font-tt-interphases);
 }
 .div31,
 .namaname1 {
@@ -138,16 +140,16 @@
 .parent2 {
   flex: 1;
   align-items: center;
-  gap: 8px;
+  gap: var(--gap-5xs);
 }
 .namaname-group {
   align-self: stretch;
   align-items: flex-start;
-  gap: 4px;
+  gap: var(--gap-9xs);
 }
 .kcp-tangerang-summarecon1 {
   position: relative;
-  color: #333;
+  color: var(--black-b400-txttitle);
 }
 .cabangbranch-group,
 .frame-parent5,
@@ -156,22 +158,22 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  gap: 8px;
+  gap: var(--gap-5xs);
 }
 .cabangbranch-group,
 .frame-parent5 {
   align-items: flex-start;
-  gap: 4px;
+  gap: var(--gap-9xs);
 }
 .frame-parent5 {
   width: 262px;
   flex-direction: column;
-  gap: 6px;
+  gap: var(--gap-7xs);
 }
 .jan-2023-1 {
   flex: 1;
   position: relative;
-  color: #333;
+  color: var(--black-b400-txttitle);
 }
 .tgl-downloaddownloaded-on-container1 {
   position: relative;
@@ -187,12 +189,12 @@
 }
 .frame-parent6 {
   flex-direction: column;
-  gap: 6px;
+  gap: var(--gap-7xs);
   min-width: 146px;
 }
 .customer {
   flex-direction: row;
-  gap: 20px;
+  gap: var(--gap-xl);
   max-width: 100%;
 }
 .dari-151,
@@ -215,8 +217,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  padding: 0 0 0 17px;
-  color: #686868;
+  padding: 0 0 0 var(--padding-mid);
+  color: var(--black-b200-txtplaceholder);
 }
 .customer-parent,
 .name3 {
@@ -227,16 +229,16 @@
   width: 40px;
   flex-direction: column;
   align-items: flex-end;
-  gap: 6px;
+  gap: var(--gap-7xs);
   text-align: right;
-  color: #333;
+  color: var(--black-b400-txttitle);
 }
 .customer-parent {
   align-self: stretch;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
-  gap: 16px;
+  gap: var(--gap-base);
   max-width: 100%;
   z-index: 1;
 }
@@ -262,15 +264,15 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 3.5px 8px;
+  padding: var(--padding-9xs-5) var(--padding-5xs);
   box-sizing: border-box;
   max-width: 100%;
   z-index: 1;
-  font-size: 10px;
-  color: #fff;
+  font-size: var(--font-size-3xs);
+  color: var(--black-b0-bgwhite);
 }
 .funds {
-  color: #686868;
+  color: var(--black-b200-txtplaceholder);
 }
 .danafunds-txt {
   line-break: anywhere;
@@ -285,7 +287,7 @@
 }
 .title {
   align-self: stretch;
-  background-color: #fff;
+  background-color: var(--black-b0-bgwhite);
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -302,7 +304,7 @@
   height: 8.5px;
   width: 8.5px;
   border-radius: 50%;
-  background-color: #00ba4a;
+  background-color: var(--green-g300);
 }
 .tabungan {
   flex: 1;
@@ -314,7 +316,7 @@
   flex-direction: row;
   align-items: flex-end;
   justify-content: flex-start;
-  gap: 4px;
+  gap: var(--gap-9xs);
 }
 .products-child,
 .products-item {
@@ -322,15 +324,15 @@
   width: 8.5px;
   position: relative;
   border-radius: 50%;
-  background-color: #007dfe;
+  background-color: var(--blue-b300-primary);
 }
 .products-item {
-  background-color: #ffb700;
+  background-color: var(--yellow-y300-highlight);
 }
 .product-details {
   flex: 1;
   flex-direction: column;
-  gap: 15px;
+  gap: var(--gap-mini);
 }
 .product,
 .product-details,
@@ -342,28 +344,28 @@
 .product {
   align-self: stretch;
   flex-direction: row;
-  padding: 0 8px;
+  padding: 0 var(--padding-5xs);
 }
 .product-type {
   flex: 1;
   flex-direction: column;
-  gap: 7.5px;
+  gap: var(--gap-5xs-5);
   min-width: 97px;
   text-align: left;
 }
 .ending-balance-idr {
   margin: 0;
-  color: #494949;
+  color: var(--black-b300-txtbody);
 }
 .saldo-akhir-idr-ending-balan-wrapper {
   align-self: stretch;
-  background-color: #cae6fc;
+  background-color: var(--color-lightblue);
   overflow: hidden;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 8px;
+  padding: var(--padding-5xs);
 }
 .div35 {
   width: 54px;
@@ -377,7 +379,7 @@
   flex-direction: column;
   align-items: flex-end;
   justify-content: flex-start;
-  gap: 15px;
+  gap: var(--gap-mini);
 }
 .frame-parent7,
 .frame-wrapper2 {
@@ -388,14 +390,14 @@
   flex: 1;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 7.5px;
+  gap: var(--gap-5xs-5);
   min-width: 95px;
 }
 .frame-wrapper2 {
   align-self: stretch;
   flex-direction: row;
   justify-content: flex-end;
-  padding: 0 8px 0 12px;
+  padding: 0 var(--padding-5xs) 0 var(--padding-xs);
 }
 .frame-parent8 {
   width: 100px;
@@ -403,7 +405,7 @@
   flex-direction: column;
   align-items: flex-end;
   justify-content: flex-start;
-  gap: 7.5px;
+  gap: var(--gap-5xs-5);
 }
 .balance,
 .finance-header {
@@ -414,14 +416,14 @@
 .balance {
   align-self: stretch;
   flex-direction: row;
-  gap: 2px;
+  gap: var(--gap-11xs);
   text-align: right;
-  font-size: 7px;
+  font-size: var(--font-size-6xs);
 }
 .finance-header {
   flex: 1;
   flex-direction: column;
-  gap: 8px;
+  gap: var(--gap-5xs);
   min-width: 260px;
   max-width: 100%;
 }
@@ -439,7 +441,7 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-between;
-  gap: 20px;
+  gap: var(--gap-xl);
 }
 .div43 {
   width: 23px;
@@ -454,19 +456,19 @@
   top: 4.5px;
   left: 0;
   border-radius: 50%;
-  background-color: #007dfe;
-  border: 0 solid #fff;
+  background-color: var(--blue-b300-primary);
+  border: 0 solid var(--black-b0-bgwhite);
   box-sizing: border-box;
   width: 100px;
   height: 100px;
 }
 .frame-child16,
 .frame-child17 {
-  background-color: #ffb700;
+  background-color: var(--yellow-y300-highlight);
   z-index: 1;
 }
 .frame-child17 {
-  background-color: #00ba4a;
+  background-color: var(--green-g300);
   z-index: 2;
 }
 .vector-296-stroke12 {
@@ -506,12 +508,12 @@
 }
 .frame-wrapper3 {
   flex-direction: row;
-  padding: 0 10px;
+  padding: 0 var(--padding-3xs);
 }
 .frame-parent9 {
   align-self: stretch;
   flex-direction: column;
-  gap: 102.5px;
+  gap: var(--gap-83xl-5);
 }
 .content-inner,
 .content3 {
@@ -523,9 +525,9 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-end;
-  padding: 0 0 7px;
+  padding: 0 0 var(--padding-6xs);
   text-align: right;
-  font-size: 7px;
+  font-size: var(--font-size-6xs);
 }
 .content3 {
   align-self: stretch;
@@ -533,8 +535,8 @@
   flex-wrap: wrap;
   align-items: flex-end;
   justify-content: flex-start;
-  padding: 0 6px 7.5px 0;
-  gap: 69px;
+  padding: 0 var(--padding-7xs) var(--padding-5xs-5) 0;
+  gap: var(--gap-50xl);
   max-width: 100%;
   z-index: 1;
 }
@@ -553,10 +555,10 @@
   height: 8.5px;
   position: relative;
   border-radius: 50%;
-  background-color: #00ba4a;
+  background-color: var(--green-g300);
 }
 .fund-icon-list1 {
-  background-color: #007dfe;
+  background-color: var(--blue-b300-primary);
 }
 .fund-icon-list2,
 .fund-icon-list3,
@@ -566,19 +568,19 @@
   height: 8.5px;
   position: relative;
   border-radius: 50%;
-  background-color: #ffb700;
+  background-color: var(--yellow-y300-highlight);
 }
 .fund-icon-list3,
 .fund-icon-list4,
 .fund-icon-list5 {
-  background-color: #ed1c24;
+  background-color: var(--red-r300-text-error);
 }
 .fund-icon-list4,
 .fund-icon-list5 {
-  background-color: #7697ce;
+  background-color: var(--sukha-slate-blue-s300);
 }
 .fund-icon-list5 {
-  background-color: #41396d;
+  background-color: var(--sukha-violet-v300);
 }
 .fund-icons {
   display: flex;
@@ -617,7 +619,7 @@
   flex: 1;
   flex-direction: row;
   align-items: flex-end;
-  gap: 4px;
+  gap: var(--gap-9xs);
 }
 .fund-title,
 .fund-total {
@@ -626,12 +628,12 @@
 .fund-title {
   align-self: stretch;
   flex-direction: column;
-  gap: 6px;
+  gap: var(--gap-7xs);
 }
 .fund-total {
   width: 96px;
   flex-direction: row;
-  padding: 0 8px;
+  padding: 0 var(--padding-5xs);
   box-sizing: border-box;
 }
 .frame-parent10,
@@ -643,12 +645,12 @@
 .fund-type {
   display: flex;
   justify-content: flex-start;
-  gap: 15px;
+  gap: var(--gap-mini);
   min-width: 97px;
   text-align: left;
 }
 .frame-parent10 {
-  gap: 6px;
+  gap: var(--gap-7xs);
   min-width: 95px;
 }
 .frame-parent10,
@@ -663,12 +665,12 @@
   align-items: flex-end;
   padding: 0 38px 0 0;
   box-sizing: border-box;
-  gap: 6px;
+  gap: var(--gap-7xs);
 }
 .wrapper4 {
   flex-direction: row;
   align-items: flex-start;
-  padding: 0 0 0 19px;
+  padding: 0 0 0 var(--padding-lgi);
 }
 .funds-chart-legend {
   position: relative;
@@ -684,11 +686,11 @@
 }
 .frame-parent15 {
   flex-direction: column;
-  gap: 3px;
+  gap: var(--gap-10xs);
 }
 .frame-wrapper6 {
   flex-direction: row;
-  padding: 0 0 0 13px;
+  padding: 0 0 0 var(--padding-smi);
 }
 .mutual-funds-chart {
   width: 23px;
@@ -702,7 +704,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 11px;
+  gap: var(--gap-2xs);
 }
 .mutual-funds-legend {
   width: 23.9px;
@@ -730,8 +732,8 @@
   top: 4px;
   left: 0;
   border-radius: 50%;
-  background-color: #007dfe;
-  border: 0 solid #fff;
+  background-color: var(--blue-b300-primary);
+  border: 0 solid var(--black-b0-bgwhite);
   box-sizing: border-box;
   width: 100px;
   height: 100px;
@@ -744,8 +746,8 @@
   top: 4px;
   left: 0;
   border-radius: 50%;
-  background-color: #ffb700;
-  border: 0 solid #fff;
+  background-color: var(--yellow-y300-highlight);
+  border: 0 solid var(--black-b0-bgwhite);
   box-sizing: border-box;
   width: 100px;
   height: 100px;
@@ -754,17 +756,17 @@
 .mutual-funds-legend-marker-sha-child,
 .mutual-funds-legend-marker-sha2,
 .mutual-funds-legend-marker-sha3 {
-  background-color: #41396d;
+  background-color: var(--sukha-violet-v300);
   z-index: 4;
 }
 .mutual-funds-legend-marker-sha-child,
 .mutual-funds-legend-marker-sha3 {
-  background-color: #00ba4a;
+  background-color: var(--green-g300);
   z-index: 5;
 }
 .mutual-funds-legend-marker-sha-child {
   top: 0;
-  background-color: #7697ce;
+  background-color: var(--sukha-slate-blue-s300);
   width: 100%;
   height: 100%;
   z-index: 3;
@@ -797,8 +799,8 @@
   top: 0;
   left: 0;
   border-radius: 50%;
-  background-color: #ed1c24;
-  border: 0 solid #fff;
+  background-color: var(--red-r300-text-error);
+  border: 0 solid var(--black-b0-bgwhite);
   box-sizing: border-box;
   width: 100%;
   height: 100%;
@@ -859,7 +861,7 @@
 .mutual-funds-legend1 {
   width: 24.1px;
   flex-direction: column;
-  gap: 98px;
+  gap: var(--gap-79xl);
 }
 .market,
 .market-inner,
@@ -877,9 +879,9 @@
 .market {
   align-self: stretch;
   flex-direction: row;
-  gap: 2px;
+  gap: var(--gap-11xs);
   text-align: right;
-  font-size: 7px;
+  font-size: var(--font-size-6xs);
 }
 .content4,
 .finance-container {
@@ -890,14 +892,14 @@
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 0 5px 9px 0;
-  gap: 8px;
+  padding: 0 var(--padding-8xs) 9px 0;
+  gap: var(--gap-5xs);
   z-index: 1;
 }
 .finance-container {
-  gap: 20px;
-  font-size: 9px;
-  color: #333;
+  gap: var(--gap-xl);
+  font-size: var(--font-size-4xs);
+  color: var(--black-b400-txttitle);
 }
 .finance-container,
 .frame-parent4,
@@ -910,17 +912,17 @@
 .frame-parent4 {
   flex: 1;
   flex-direction: column;
-  gap: 24px;
+  gap: var(--gap-5xl);
 }
 .info {
   align-self: stretch;
   flex-direction: row;
-  padding: 0 16px 201px;
+  padding: 0 var(--padding-base) 201px;
   box-sizing: border-box;
   text-align: left;
-  font-size: 8px;
-  color: #000;
-  font-family: "TT Interphases";
+  font-size: var(--font-size-5xs);
+  color: var(--color-black);
+  font-family: var(--font-tt-interphases);
 }
 .pt-bank-mandiri1 {
   width: 343.3px;
@@ -945,7 +947,8 @@
   flex: 1;
   flex-direction: column;
   align-items: flex-start;
-  padding: 10px 10px 12px 16px;
+  padding: var(--padding-3xs) var(--padding-3xs) var(--padding-xs)
+    var(--padding-base);
   box-sizing: border-box;
   min-width: 302px;
 }
@@ -970,9 +973,9 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
-  padding: 0 16px 0 0;
+  padding: 0 var(--padding-base) 0 0;
   box-sizing: border-box;
-  gap: 45px;
+  gap: var(--gap-26xl);
 }
 .footer1,
 .root1 {
@@ -981,19 +984,19 @@
 }
 .footer1 {
   align-self: stretch;
-  border-top: 1px solid #ededed;
+  border-top: 1px solid var(--black-b50-bgdisabled);
   box-sizing: border-box;
   z-index: 1;
   text-align: left;
-  font-size: 8px;
-  color: #ada6ae;
-  font-family: "TT Interphases";
+  font-size: var(--font-size-5xs);
+  color: var(--black-character-low-emphasis);
+  font-family: var(--font-tt-interphases);
 }
 .root1 {
   width: 595px;
-  background-color: #fff;
+  background-color: var(--black-b0-bgwhite);
   position: relative;
-  gap: 16px;
+  gap: var(--gap-base);
   line-height: normal;
   letter-spacing: normal;
 }
@@ -1002,7 +1005,7 @@
     flex-wrap: wrap;
   }
   .content3 {
-    gap: 34px;
+    gap: var(--gap-15xl);
   }
   .frame-parent10,
   .fund-type {
@@ -1018,9 +1021,9 @@
     flex-wrap: wrap;
   }
   .content3 {
-    gap: 17px;
+    gap: var(--gap-mid);
   }
   .content5 {
-    gap: 22px;
+    gap: var(--gap-3xl);
   }
 }
